--- a/style.css
+++ b/style.css
@@ -17,15 +17,20 @@
     font-style: normal;
     }
 
-body {
+aside {
     background-color: #FFF;
     font-family: 'TT Lakes';
-    max-width: 320px;
-    max-height: 1024px;
+    width: 320px;
+    height: 100vh;
     padding-left: 20px;
     margin: 0;
     box-shadow: 5px 0 30px 10px rgba(0, 0, 0, 0.2);
+    display: flex;
+    flex-direction: column;    
+    overflow-y: auto;
 }
+
+
 
 .icon {
     width: 40px;
@@ -57,6 +62,12 @@ body {
 }
 .button:hover {
     opacity: 0.7;
+}
+.main_part {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    justify-content: space-between;
 }
 
 .main {
@@ -98,11 +109,7 @@ body {
 .menu__link--current {
     color: #7E7E82;
 }
-.main_part {
-    display: flex;
-    flex-direction: column;
-    gap: 150px;
-}
+
 
 .footer__icon {
     display: flex;
